// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JsonDiffComponent /> it should render correctly (array vs array) 1`] = `
<div
  className="diff"
  style={null}
>
  <pre>
    <span
      className="unchanged"
      style={null}
    >
      [

    </span>
    <span
      className="unchanged"
      style={null}
    >
        ...

    </span>
    <span
      className="unchanged"
      style={null}
    >
        ...

    </span>
    <span
      className="unchanged"
      style={null}
    >
        ...

    </span>
    <span
      className="addition"
      style={null}
    >
        4

    </span>
    <span
      className="unchanged"
      style={null}
    >
      ]

    </span>
  </pre>
</div>
`;

exports[`<JsonDiffComponent /> it should render correctly (object vs array) 1`] = `
<div
  className="diff"
  style={null}
>
  <pre>
    <span
      className="deletion"
      style={null}
    >
      {

    </span>
    <span
      className="deletion"
      style={null}
    >
        key1: "value1"

    </span>
    <span
      className="deletion"
      style={null}
    >
        key2: 123

    </span>
    <span
      className="deletion"
      style={null}
    >
        key3: [

    </span>
    <span
      className="deletion"
      style={null}
    >
          1

    </span>
    <span
      className="deletion"
      style={null}
    >
          2

    </span>
    <span
      className="deletion"
      style={null}
    >
          3

    </span>
    <span
      className="deletion"
      style={null}
    >
        ]

    </span>
    <span
      className="deletion"
      style={null}
    >
      }

    </span>
    <span
      className="addition"
      style={null}
    >
      [

    </span>
    <span
      className="addition"
      style={null}
    >
        1

    </span>
    <span
      className="addition"
      style={null}
    >
        2

    </span>
    <span
      className="addition"
      style={null}
    >
        3

    </span>
    <span
      className="addition"
      style={null}
    >
        4

    </span>
    <span
      className="addition"
      style={null}
    >
      ]

    </span>
  </pre>
</div>
`;

exports[`<JsonDiffComponent /> it should render correctly (objects vs object) 1`] = `
<div
  className="diff"
  style={null}
>
  <pre>
    <span
      className="unchanged"
      style={null}
    >
      {

    </span>
    <span
      className="deletion"
      style={null}
    >
        key1: "value1"

    </span>
    <span
      className="addition"
      style={null}
    >
        key1: "value"

    </span>
    <span
      className="unchanged"
      style={null}
    >
        key3: [

    </span>
    <span
      className="unchanged"
      style={null}
    >
          ...

    </span>
    <span
      className="unchanged"
      style={null}
    >
          ...

    </span>
    <span
      className="unchanged"
      style={null}
    >
          ...

    </span>
    <span
      className="addition"
      style={null}
    >
          4

    </span>
    <span
      className="unchanged"
      style={null}
    >
        ]

    </span>
    <span
      className="unchanged"
      style={null}
    >
      }

    </span>
  </pre>
</div>
`;

exports[`<JsonDiffComponent /> should pick up CSS classes from styleCustomization 1`] = `
<div
  className="custom_frame_class"
  style={null}
>
  <pre>
    <span
      className="custom_unchanged_class"
      style={null}
    >
      {

    </span>
    <span
      className="custom_deletion_class"
      style={null}
    >
        key1: "value1"

    </span>
    <span
      className="custom_addition_class"
      style={null}
    >
        key1: "value"

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
        key3: [

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
          ...

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
          ...

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
          ...

    </span>
    <span
      className="custom_addition_class"
      style={null}
    >
          4

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
        ]

    </span>
    <span
      className="custom_unchanged_class"
      style={null}
    >
      }

    </span>
  </pre>
</div>
`;

exports[`<JsonDiffComponent /> should pick up CSS styles from styleCustomization 1`] = `
<div
  className="diff"
  style={
    {
      "backgroundColor": "black",
    }
  }
>
  <pre>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
      {

    </span>
    <span
      className="deletion"
      style={
        {
          "lineHeight": 2,
        }
      }
    >
        key1: "value1"

    </span>
    <span
      className="addition"
      style={
        {
          "lineHeight": 1,
        }
      }
    >
        key1: "value"

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
        key3: [

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
          ...

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
          ...

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
          ...

    </span>
    <span
      className="addition"
      style={
        {
          "lineHeight": 1,
        }
      }
    >
          4

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
        ]

    </span>
    <span
      className="unchanged"
      style={
        {
          "lineHeight": 3,
        }
      }
    >
      }

    </span>
  </pre>
</div>
`;

exports[`<JsonDiffComponent /> should return an empty div if there are no changes (snapshot) 1`] = `
<div
  className="diff"
  style={null}
>
  <pre />
</div>
`;
